# MFC_OnlineTetris

./: .gitattributes  .gitignore  CMakeLists.txt  OnlineTetris.sln  ReadMe.txt  Server.sln  Server.vcxproj  Server.vcxproj.filters
Commons/: Chat.h  Commons.sln  Commons.vcxproj  Commons.vcxproj.filters  CommonsServer.filters  CommonsServer.sln  CommonsServer.vcxproj  CommonsServer.vcxproj.filters  CommonsServer.vcxproj.vcxproj  DefineInfo.h  ITObjectContainer.h  Logger.h  MessageHeader.h  Property.h  TAtomic.cpp  TAtomic.h  TFunctional.h  TMessage.h  TMessageObject.cpp  TMessageObject.h  TMessageSender.cpp  TMessageSender.h  TMessageStruct.h  TMessageThread.cpp  TMessageThread.h  TMessenger.cpp  TMessenger.h  TObject.cpp  TObject.h  TObjectContainer.h  TObjectContainerFactory.h  TProperty.h  TSocket.cpp  TSocket.h  TSocketThread.cpp  TSocketThread.h  TSwitchingMessage.cpp  TSwitchingMessage.h  TType.h  TUser.cpp  (+10 more)
Commons/Default/: subdir.mk
Commons/Entity/: TChat.cpp  TChat.h  TObject.cpp  TObject.h  TSocket.cpp  TSocket.h  TUser.cpp  TUser.h
Commons/Entity/Room/: TIGameRoom.cpp  TIGameRoom.h  TIRoom.cpp  TIRoom.h  TIWaitingRoom.cpp  TIWaitingRoom.h
Commons/Room/: TIGameRoom.cpp  TIGameRoom.h  TIRoom.cpp  TIRoom.h  TIWaitingRoom.cpp  TIWaitingRoom.h
Commons_back./: Commons.vcxproj  DefineInfo.h  MessageHeader.h  TSocket.h  TType.h  TUser.cpp  Validator.cpp  Validator.h
Commons_back./Default/: makefile  subdir.mk
OnlineTetris/: CliektSocket.h  ClientSocket.cpp  ConnectingDialog.cpp  ConnectingDialog.h  DefineInfo.h  EnteringDialog.cpp  EnteringDialog.h  MainFrm.cpp  MainFrm.h  MessageHeader.h  Messenger.cpp  Messenger.h  MyButton.cpp  MyButton.h  MyDoc.cpp  MyDoc.h  MyEdit.cpp  MyEdit.h  MyListen.cpp  MyListen.h  MySocket.cpp  MySocket.h  MyView.cpp  MyView.h  OnlineTetris.cpp  OnlineTetris.h  OnlineTetris.rc  OnlineTetris.vcxproj  OnlineTetris.vcxproj.filters  OptionDialog.cpp  OptionDialog.h  ReadMe.txt  ServerDialog.cpp  ServerDialog.h  ServerSocket.cpp  SocketImpl.cpp  SocketImpl.h  StringManager.cpp  StringManager.h  TClientSocket.cpp  (+23 more)
OnlineTetris/res/: OnlineTetris.rc2
Server/: SocketImpl.h  main.cpp
Server/Default/: FileDeliveryServer  TetrisServer  main.d  makefile  objects.mk  sources.mk  subdir.mk
Server/Default/FileWatcher/: FileWatcher.d  subdir.mk
Server/Default/Server/: ServerManager.d  subdir.mk
Server/Default/Server/Room/: subdir.mk
Server/Messenger/: Messenger.h  TUserMessenger.cpp  TUserMessenger.h
Server/Room/: GameRoom.cpp  GameRoom.h  Room.cpp  Room.h  TGameRoom.cpp  TGameRoom.h  TRoom.cpp  TRoom.h  TWaitingRoom.cpp  TWaitingRoom.h  WaitingRoom.cpp  WaitingRoom.h
Server/Server/: ServerManager.cpp  ServerManager.h  ServerSocket.cpp  ServerSocket.h  SocketImpl.cpp  SocketImpl.h  TServerManager.cpp  TServerManager.h  TServerSocket.cpp  TServerSocket.h  TServerUser.cpp  TServerUser.h  TSocketImpl.cpp  TSocketImpl.h  TUserServer.cpp  TUserServer.h  TetrisUserServer.cpp  TetrisUserServer.h
Server/Server/Room/: GameRoom.cpp  GameRoom.h  Room.cpp  Room.h  WaitingRoom.cpp  WaitingRoom.h
